# payment-distribution-contracts

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yaml
examples/: payment-dist.sh  schema.rs
schema/: instantiate_msg.json
src/: contract.rs  contract_info.rs  error.rs  msg.rs
