[package]
name = "payment-distribution-contracts"
version = "1.0.0-beta"
authors = ["Anthony Fremuth <afremuth@figure.com>","John Louie <jlouie@figure.com>"]
edition = "2018"

exclude = [
  "payment-distribution-contracts.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta5", features = ["staking"] }
cosmwasm-storage = { version = "1.0.0-beta5" }
cw-storage-plus = { version = "0.12.1" }
provwasm-std = { version = "1.0.0-beta2" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta5" }
provwasm-mocks = { version = "1.0.0-beta2" }
